--- a/README
+++ b/README
@@ -21,19 +21,17 @@ Getting Started
 Dependencies
 ============
 
+The code was tested on Ubuntu 11.10.
 In order to compile the switch your 
 system must have the following libraries
 
 Libpcap 
-# sudo apt-get install libpcap
 # sudo apt-get install libpcap-dev
 ----------------------------------------
 Xerces-C version 2.8.0
-# sudo apt-get install libxerces-c28
 # sudo apt-get install libxerces-c2-dev
 ----------------------------------------
 libpcre
-# sudo apt-get install libpcre3
 # sudo apt-get install libpcre3-dev
 ----------------------------------------
 A recent version of flex and bison
@@ -72,8 +70,7 @@ Running
 
 To start the datapath, run the following commands:
 
-    cd udatapath
-    sudo ./ofdatapath --datapath-id=<dpid> --interfaces=<if-list> ptcp:<port>
+    sudo udatapath/ofdatapath --datapath-id=<dpid> --interfaces=<if-list> ptcp:<port>
 
 This will start the datapath, with the given datapath id, and interace list,
 opening a passive tcp connection on the given port. For a complete list of
@@ -81,8 +78,7 @@ options, use the --help argument.
 
 To start the secure channel, run the following commands:
 
-    cd secchan
-    ./ofprotocol tcp:<switch-host>:<switch-port> tcp:<ctrl-host>:<ctrl-port>
+    secchan/ofprotocol tcp:<switch-host>:<switch-port> tcp:<ctrl-host>:<ctrl-port>
 
 This will open tcp connections to both the switch and the controller, relaying
 OpenFlow protocol messages between the two. For a complete list of options,
